# INDEX-STOCK-FUNDS-PROJECT

./: .gitignore  README.md  changes_made.md  docker-compose.yml  instruction.md  main.py  project_summary.md  pyproject.toml  requirements.txt
backend/: .dockerignore  Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
backend/api/: admin.py  market_data.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: seed_data.py
backend/api/migrations/: 0001_initial.py  0002_marketdatacache.py
backend/config/: settings.py
first_version_group/: .gitignore  README.md  docker-compose.yml  instructions.md  project_summary.md  team_roles.md
first_version_group/backend/api/: admin.py  models.py  urls.py
first_version_group/backend/config/: settings.py
first_version_group/frontend/docs/: frontend_implementation_summary.md
first_version_group/frontend/src/app/: layout.tsx  page.tsx
first_version_group/frontend/src/app/news/: page.tsx
first_version_group/frontend/src/components/layout/: Header.tsx
first_version_group/frontend/src/utils/: api.ts
frontend/: .dockerignore  next.config.ts  package-lock.json  package.json
frontend/docs/: style_guide.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/learning/: page.tsx
frontend/src/app/news/: page.tsx
frontend/src/app/quiz/: page.tsx
frontend/src/app/trade/: page.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/utils/: api.ts  mockData.ts
