[project]
name = "stocks-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-cors-headers>=4.9.0",
    "drf-spectacular>=0.29.0",
    "requests>=2.34.2",
]

[tool.uv.workspace]
members = [
    "backend",
]
